@@ -604,6 +604,13 @@ public class EXTAsuntoDaoImpl extends AbstractEntityDao<Asunto, Long> implements
 
 		HashMap<String, Object> params = new HashMap<String, Object>();
 		final int bufferSize = 1024;
+		if(dto != null && !Checks.esNulo(dto.getSort())){
+			if("fechaCrear".equals(dto.getSort())){
+				dto.setSort("a.auditoria." + dto.getSort());
+			} else {
+				dto.setSort("a." + dto.getSort());
+			}
+		}
 		StringBuffer hql = new StringBuffer(bufferSize);
 
 		hql.append("from Asunto a ");
@@ -669,13 +676,19 @@ public class EXTAsuntoDaoImpl extends AbstractEntityDao<Asunto, Long> implements
 			hql.append(" and cex.auditoria." + Auditoria.UNDELETED_RESTICTION);
 		}
 
-
 		if (requierePrevioCDD(dto)) {
 			hql.append(" and asu.id = cdd.asunto.id ");
 		}
 
 		if (requierePostCDD(dto)) {
-			hql.append(" and cdd2.id = crn.batchAcuerdoCierreDeuda.id and crn.resultado = rvn.codigo and crn.descripcionResultado = rvn.descripcion and asu.codigoExterno = crn.codigoExterno ");
+			hql.append(" and cdd2.id = crn.batchAcuerdoCierreDeuda.id ");
+			hql.append(" and asu.id = cdd2.asunto.id ");
+			hql.append(" and crn.resultado = rvn.codigo and crn.descripcionResultado = rvn.descripcion ");
+			
+			hql.append(" and crn.id in ( ");
+			hql.append(" select max(crn1.id) ");
+			hql.append(" from  BatchCDDResultadoNuse crn1 ");
+			hql.append(" group by crn1.codigoExterno, crn1.batchAcuerdoCierreDeuda.id ) ");			
 		}
 
 		// PERMISOS DEL USUARIO (en caso de que sea externo)
@@ -813,10 +826,9 @@ public class EXTAsuntoDaoImpl extends AbstractEntityDao<Asunto, Long> implements
 		if (!Checks.esNulo(dto.getComboErrorPostCDD())) {
 			if("0".equals(dto.getComboErrorPostCDD())){
 				hql.append(" and rvn.codigo <> '0' and cdd2.fechaAlta <= crn.fechaResultado");
-			}
-			else{
-				hql.append(" and rvn.id = :errorPost and cdd2.fechaAlta <= crn.fechaResultado");
-				params.put("errorPost", (dto.getComboErrorPostCDD()));
+			}else{
+				hql.append(" and rvn.id = :errorPost and cdd2.fechaAlta <= crn.fechaResultado ");
+				params.put("errorPost", (Long.valueOf(dto.getComboErrorPostCDD())));
 			}			
 		}
 		
@@ -881,8 +893,8 @@ public class EXTAsuntoDaoImpl extends AbstractEntityDao<Asunto, Long> implements
 
 		// FILTRO DE ZONAS
 		if (dto.getJerarquia() != null && dto.getJerarquia().length() > 0) {
-			hql.append(" and cnt.zona.nivel.id >= :nivelId");
-			params.put("nivelId", new Long(dto.getJerarquia()));
+			hql.append(" and cnt.zona.nivel.codigo <= :nivelId");
+			params.put("nivelId", Integer.valueOf(dto.getJerarquia()));
 
 			if (dto.getCodigoZonas().size() > 0) {
 				hql.append(" and ( ");
@@ -1164,7 +1176,7 @@ public class EXTAsuntoDaoImpl extends AbstractEntityDao<Asunto, Long> implements
 
             if (!q.list().isEmpty()){
                 if(!Checks.esNulo(q.list().get(0).toString()) || q.list().get(0).toString() != ""){
-                    msgErrorEnvioCDD = "Error validación CDD: " + q.list().get(0).toString();
+                    msgErrorEnvioCDD = "Error validaciï¿½n CDD: " + q.list().get(0).toString();
                 }
             }
 
